# IR-Project

phase-1/: Information_Retrieval.ipynb  information_retrieval.py
project-1/phase-2/backend/: app.py  ir_system.py  pyproject.toml
project-1/phase-2/frontend/: index.html  script.js  style.css
project-2/: LLM_Med_FineTuning.ipynb  LLM_TinyLlama_Normal.ipynb  llm_med_finetuning.py  llm_tinyllama_normal.py
project-2/LLM-FineTuning/: eval_results.json  test_cases_with_generated_answers.json
project-2/LLM-FineTuning/fine-tuned-model/: README.md  adapter_config.json
