[project]
name = "ir-system"
version = "0.1.0"
description = "Simple IR-System for univeristy IR lecture"
authors = [
    {name = "Amin Gharibi",email = "Gharibi8364@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flast[all] (>=1.3,<2.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "flask-cors (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
